--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.4.1"
+    "prisma": "^6.4.1",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
